# metis-post-training-pipeline

./: .gitignore  CLAUDE.md  README.md  ace_eval.py  ace_eval_modal.py  ace_eval_prompts.py  ace_grounding_wrapper.py  ace_grpo_modal.py  ace_parquet.py  ace_reward.py  ace_search_tool.py  ace_tool_config.yaml  pyproject.toml  rescore.py  run_baselines.sh  test.py
ace_scoring/: __init__.py  jina.py  llm.py  product.py  prompts.py  scorer.py  sources.py  types.py
ace_verl_data/: test.parquet  train.parquet
apex-evals/: README.md
apex-evals/ace/: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  setup_xurls.sh
apex-evals/ace/configs/: config.py  domain_config.py  logging_config.py  model_providers.py
apex-evals/ace/dataset/: ACE-DIY.csv  ACE-Food.csv  ACE-Gaming.csv  ACE-Shopping.csv
apex-evals/ace/harness/: autograder.py  grounding-pipeline.py  make-grounded-call.py
apex-evals/ace/harness/helpers/: purchase_page_verifier.py  reddit_utils.py  youtube_utils.py
apex-evals/ace/pipeline/: clear_all_runs.py  clear_run.py  export_results.py  init_from_dataset.py  local_file_reader.py  regrade_task.py  run_all_models.py  runner.py  supabase_reader.py  test_single_task.py
apex-evals/ace/supabase-setup/: create_rls_policies.sql  create_tables.sql
apex-evals/ace/test/: test_runner.py
apex-evals/apex-evals-v1-extended/: pyproject.toml  requirements.txt
apex-evals/apex-evals-v1-extended/examples/: example.py  run_with_hf.py
apex-evals/apex-evals-v1-extended/src/call_llm/: litellm_client.py
(+2 files in other folders)
