[project]
name = "ace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.3.0",
    "firecrawl-py>=4.3.0",
    "google-genai>=1.40.0",
    "html2text>=2025.4.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "supabase>=2.0.0",
    "tqdm>=4.60.0",
]

[tool.setuptools.packages.find]
include = ["configs*", "pipeline*", "harness*", "test*"]
